# Coral-Interface-Agent

./: .env_sample  .gitignore  0-langchain-interface.py  Dockerfile  README.md  main.py  pyproject.toml  run_agent.sh  test.py
.github/workflows/: docker-image.yml
utils/: coral_config.py
